Bug 1874 - mwait/monitor don't work in 64bit
Summary: mwait/monitor don't work in 64bit
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.17
: P2 normal
Target Milestone: ---
Assignee: H.J. Lu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-15 23:59 UTC by H.J. Lu
Modified: 2005-12-08 17:22 UTC (History)
1 user (show)

See Also:
Host:
Target: x86_64-unknown-linux-gnu
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2005-11-15 23:59:09 UTC
[hjl@gnu-13 gas]$ cat x.s
        monitor %rax,%rcx,%rdx
        mwait %rax,%rcx
[hjl@gnu-13 gas]$ as -o x.o x.s
x.s: Assembler messages:
x.s:1: Error: suffix or operands invalid for `monitor'
x.s:2: Error: suffix or operands invalid for `mwait'
Comment 1 H.J. Lu 2005-12-08 17:22:04 UTC
Fixed by

http://sourceware.org/ml/binutils/2005-12/msg00035.html